# dict-test

./: .gitignore  README.md  dict-test.cabal
src/: DictTest.hs
test/: DoTest.hss  Test.hs
